--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@mantine/core": "^7.10.1",
     "@mantine/dates": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@tabler/icons-react": "^3.5.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
     "prettier": "^3.3.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
