--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^7.10.1",
     "@mantine/dates": "^7.10.1",
+    "@mantine/form": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@tabler/icons-react": "^3.5.0",
     "autoprefixer": "^10.4.19",
