--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^7.10.1",
     "@mantine/dates": "^7.10.1",
     "@mantine/form": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
@@ -17,6 +16,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "immer": "^10.1.1",
     "next": "14.2.3",
     "prettier": "^3.3.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
@@ -31,7 +31,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
-    "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
